--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<<!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
@@ -30,9 +30,25 @@
             font-size: 30px;
             margin-top: 20%;
         }
+        h2 {
+            color: #fff;
+            font-size: 30px;
+            margin-top: 20%;
+        }
+        h1{
+            color: #fff;
+            font-size: 30px;
+            margin-top: 20%;
+        }
     </style>
 </head>
 <body>
+    <img src="curi.jpg" alt="" width="300">
+    <br><br><br>
+    <h2>tô fazendo essa bagaça aqui pra senhorita ficar sabendo que vc tem macho viu</h2>
+    <img src="cachoro.jpg" alt="" width="300">
+    <h2>só fale comigo se for por áudio pra eu ouvir esse teu jeitinho de falar que mexe comigo</h2>
+    <img src="Orelhão.jpg" alt="" width="300">
     <p>posso dar um xero nesse cangote?</p>
     <button id="sim">SIM</button>
     <button id="nao">NÃO</button>
@@ -57,18 +73,61 @@
         <source src="Djavan - Oceano (Ao Vivo)(720P_HD).mp4" type="video/mp4">
         <source src="filme.ogg" type="video/ogg">
     </video>
+    <h1>infelizmente fui ameaçado, coagido a colocar novas músicas, sorte a sua que vc é bunita caraizin</h1>
+    <video width="320" height="240" controls="controls">
+        <source src="=se.mp4" type="video/mp4">
+        <source src="filme.ogg" type="video/ogg">
+    </video>
     <h2>Esse site é seu, pra te animar e fazer sorrir em todos os momentos, é pra isso que eu tô aqui. </h2>
     <h2>um desafio: ver até o final sem dar um sorrisinho</h2>
+    <br><br><br>
+    <img src="an.jpg" alt="" width="300">
+    <br><br><br>
+    <img src="if.jpg" alt="" width="300">
+    <br><br><br>
+    <img src="fer.jpg" alt="" width="300">
+    <br><br><br>
+    <img src="sim.jpg" alt="" width="300">
+    <br><br><br>
+    <img src="ti.jpg" alt="" width="300">
+    <br><br><br>
+    <img src="gat.jpg" alt="" width="300">
+    <br><br><br>
+    <img src="na.jpg" alt="" width="300">
+    <br><br><br>
+    <img src="che.jpg" alt="" width="300">
+    <br><br><br>
+    <img src="l.jpg" alt="" width="300">
+    <br><br><br>
+    <img src="elo.jpg" alt="" width="300">
+    <br><br><br>
+    <img src="del.jpg" alt="" width="300">
     <br><br><br>
     <img src="inter.jpg" alt="" width="300">
     <br><br><br>
     <img src="ciborgue.png" alt="" width="300">
     <br><br><br>
+    <img src="fle.jpg" alt="" width="300">
+    <br><br><br>
+    <img src="go.jpg" alt="" width="300">
+    <br><br><br>
     <img src="Ds4z4SFW0AAJS0c.jpg" alt="" width="300">
+    <br><br><br>
+    <img src="pato.jpg" alt="" width="300">
     <br><br><br>
     <img src="flahs.png" alt="" width="300">
     <br><br><br>
     <img src="gato.jpg" alt="" width="300">
+    <br><br><br>
+    <img src="wik.jpg" alt="" width="300">
+    <br><br><br>
+    <img src="cach.jpg" alt="" width="300">
+    <br><br><br>
+    <img src="c1.jpg" alt="" width="300">
+    <br><br><br>
+    <img src="c2.jpg" alt="" width="300">
+    <br><br><br>
+    <img src="c3.jpg" alt="" width="300">
     <br><br><br>
     <img src="mutavo.png" alt="" width="300">
     <br><br><br>
@@ -82,6 +141,8 @@
     <h2>leia de novo</h2>
     <h1>agora tá me devendo dois </h1>
     <h1>Acho que vc vai me fazer se mudar pra jn de tão linda que é</h1>
-    
+    <h1>tá na hora de eu ir buscar esses beijos nem que seja de carroça </h1>
+    <img src="carroça.jpg" alt="" width="300">
+
 </body>
 </html>
